data/derived/comb/progs/unify/prog1742.ml.out
Characters 45-48:
  let _ = List.fold_left (fun a x -> x / a) 1 [1.0;4.0];;
                                               ^^^
Error: This expression has type float but an expression was expected of type
         int
